--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -23,6 +23,9 @@
     "autoprefixer": "^8.2.0",
     "postcss": "^6.0.21",
     "postcss-assets": "^5.0.0",
-    "postcss-cli": "^5.0.0"
-  }
+    "postcss-cli": "^5.0.0",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.13"
+  },
+  "dependencies": {}
 }
