--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -21,9 +21,11 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.2.0",
+    "css-loader": "^0.28.11",
     "postcss": "^6.0.21",
     "postcss-assets": "^5.0.0",
     "postcss-cli": "^5.0.0",
+    "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13"
   },
