--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -22,10 +22,12 @@
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "postcss": "^6.0.21",
     "postcss-assets": "^5.0.0",
     "postcss-cli": "^5.0.0",
     "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13"
   },
