--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -15,21 +15,23 @@
   "scripts": {
     "buildNoPostcssProperty": "postcss css/style.css --use autoprefixer --output dist/style.css --no-map",
     "build": "postcss css/style.css --output dist/style.css --no-map",
-    "development":"set NODE_ENV=development && node env.js",
-    "production":"set NODE_ENV=production && node env.js"
+    "development": "set NODE_ENV=development && node env.js",
+    "production": "set NODE_ENV=production && node env.js",
+    "start": "cross-env NODE_ENV=development node env.js"
   },
   "keywords": [],
   "author": "luojianet <997948809@163.com>",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.2.0",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
-    "style-loader": "^0.20.3",
     "file-loader": "^1.1.11",
-    "url-loader": "^1.0.1",
     "postcss": "^6.0.21",
     "postcss-assets": "^5.0.0",
     "postcss-cli": "^5.0.0",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13"
   },
