--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "buildNoPostcssProperty": "postcss css/style.css --use autoprefixer --output dist/style.css --no-map",
-    "build": "postcss css/style.css --output dist/style.css --no-map",
+    "build": "postcss css/transition.css --output dist/transition.css --no-map",
     "development": "set NODE_ENV=development && node env.js",
     "production": "set NODE_ENV=production && node env.js",
     "start": "cross-env NODE_ENV=development node env.js"
@@ -27,13 +27,11 @@
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
-    "postcss": "^6.0.21",
-    "postcss-assets": "^5.0.0",
-    "postcss-cli": "^5.0.0",
+    "postcss-loader": "^2.1.3",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.14"
   },
   "dependencies": {}
 }
