--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "postcss-loader": "^2.1.3",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
