--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -32,7 +32,10 @@
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "xml-loader": "^1.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "d3": "^5.0.0"
+  }
 }
