--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "buildNoPostcssProperty": "postcss css/style.css --use autoprefixer --output dist/style.css --no-map",
     "build": "postcss css/transition.css --output dist/transition.css --no-map",
-    "dev": "set NODE_ENV=development && webpack --progress --display-modules --color",
+    "dev": "rm dist -rf && set NODE_ENV=development && webpack --progress --color --watch",
     "pro": "set NODE_ENV=production && node env.js",
     "start": "cross-env NODE_ENV=development node env.js"
   },
@@ -26,7 +26,9 @@
     "autoprefixer": "^8.2.0",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.1.3",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.20.3",
