--- a/201804/20180404/package.json
+++ b/201804/20180404/package.json
@@ -29,6 +29,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-template": "^6.2.0",
     "postcss-loader": "^2.1.3",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.20.3",
