--- a/201804/20180419/package.json
+++ b/201804/20180419/package.json
@@ -10,12 +10,26 @@
   "author": "luojianet <997948809@163.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+    "babel-plugin-transform-es3-property-literals": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
   },
   "dependencies": {
-    "jquery": "^1.12.4"
+    "bluebird": "^3.5.1",
+    "es5-shim": "^4.5.10",
+    "jquery": "^1.12.4",
+    "promise-polyfill": "^7.1.2",
+    "zepto": "^1.2.0"
   }
 }
