--- a/201804/20180427/package.json
+++ b/201804/20180427/package.json
@@ -1,15 +1,17 @@
 {
   "name": "numbers-convert",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Webpack Documentation Authoring Libraries",
   "main": "dist/webpack-numbers.js",
   "scripts": {
+    "start": "webpack --color --distplay-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "luojianet <997948809@163.com>",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
   }
