--- a/201804/20180428/package.json
+++ b/201804/20180428/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --color --display-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "luojianet <997948809@163.com>",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
   },
   "dependencies": {
-    "numbers-convert": "^1.2.1"
+    "numbers-convert": "^1.2.3"
   }
 }
