--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "element-ui": "^2.4.6",
+    "eslint": "^5.6.1",
     "express": "^4.16.3"
   }
 }
