--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "element-ui": "^2.4.6",
     "eslint": "^5.6.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "ink-docstrap": "^1.3.2"
   }
 }
