--- a/201810/webpack/demo1/package.json
+++ b/201810/webpack/demo1/package.json
@@ -14,8 +14,10 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.1",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.8.2"
   }
