--- a/201810/webpack/demo1/package.json
+++ b/201810/webpack/demo1/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "server": "webpack-dev-server"
+    "server": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "luojianet <997948809@163.com>",
@@ -18,6 +18,8 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.1",
     "webpack": "^3.12.0",
