--- a/201810/webpack/demo1/package.json
+++ b/201810/webpack/demo1/package.json
@@ -14,6 +14,9 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^9.1.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
