--- a/201810/webpack/demo4/package.json
+++ b/201810/webpack/demo4/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "autoprefixer": "^9.1.5",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^3.12.0"
