--- a/201810/webpack-xx-demo/babel-8/package.json
+++ b/201810/webpack-xx-demo/babel-8/package.json
@@ -8,5 +8,15 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
+    "webpack": "^3.12.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.1.2"
+  }
 }
