--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,9 @@ insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[package.json]
+tindent_style = space
+indent_size = 2
+tab_width = 2
+end_of_line = lf
