--- a/201810/webpack/demo6/package.json
+++ b/201810/webpack/demo6/package.json
@@ -26,13 +26,14 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
+    "css-loader": "^0.28.11",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.3"
-  }
+  },
+  "dependencies": {}
 }
