--- a/201810/webpack-xx-demo/css-module/package.json
+++ b/201810/webpack-xx-demo/css-module/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "css-loader": "^0.28.11",
+    "webpack": "^3.12.0"
+  }
 }
