--- a/201810/webpack-xx-demo/css-module/package.json
+++ b/201810/webpack-xx-demo/css-module/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "set NODE_ENV=development&webpack",
+    "pro": "set NODE_ENV=production&webpack",
+    "devx": "cross-env NODE_ENV=production webpack",
+    "lint": "eslint --fix webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chalk": "^2.4.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
+    "ora": "^3.0.0",
+    "rimraf": "^2.6.2",
     "webpack": "^3.12.0"
   }
 }
