--- a/201810/webpack-xx-demo/css-module/package.json
+++ b/201810/webpack-xx-demo/css-module/package.json
@@ -8,7 +8,8 @@
     "dev": "set NODE_ENV=development&webpack",
     "pro": "set NODE_ENV=production&webpack",
     "devx": "cross-env NODE_ENV=production webpack",
-    "lint": "eslint --fix webpack.config.js"
+    "lint": "eslint --fix webpack.config.js",
+    "build": "node webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +19,10 @@
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
     "ora": "^3.0.0",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.23.1",
     "webpack": "^3.12.0"
   }
 }
