--- a/201810/webpack-xx-demo/img-module/package.json
+++ b/201810/webpack-xx-demo/img-module/package.json
@@ -1,12 +1,20 @@
 {
   "name": "img-module",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "luojianet <997948809@163.com>",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.12.0"
+  }
 }
