--- a/201810/webpack-xx-demo/js-module/package.json
+++ b/201810/webpack-xx-demo/js-module/package.json
@@ -1,6 +1,7 @@
 {
   "name": "js-module",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,5 +9,22 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "sideEffects": [
+    "./src/index.js"
+  ],
+  "browserslist": [
+    "ie > 8"
+  ],
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^3.12.0"
+  },
+  "dependencies": {
+    "@luojianet/utility": "^2.0.2"
+  }
 }
