--- a/201811/utility/package.json
+++ b/201811/utility/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@luojianet/utility",
-  "version": "2.0.6",
+  "version": "2.0.8",
   "description": "js lib use in vip act",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
