--- a/201810/webpack-xx-demo/js-module/package.json
+++ b/201810/webpack-xx-demo/js-module/package.json
@@ -25,6 +25,6 @@
     "webpack": "^3.12.0"
   },
   "dependencies": {
-    "@luojianet/utility": "^2.0.11-0"
+    "@luojianet/utility": "^2.1.0"
   }
 }
