--- a/package.json
+++ b/package.json
@@ -15,30 +15,7 @@
     "url": "https://github.com/luojianet/demoSite/issues"
   },
   "homepage": "https://github.com/luojianet/demoSite#readme",
-  "devDependencies": {
-    "autoprefixer": "^9.2.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "chalk": "^2.4.1",
-    "copy-webpack-plugin": "^4.5.4",
-    "count_sheep": "^1.0.10",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.7.0",
-    "eslint-loader": "^2.1.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "ora": "^3.0.0",
-    "postcss-loader": "^3.0.0",
-    "rimraf": "^2.6.2",
-    "scp2": "^0.5.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "webpack": "^3.12.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "@luojianet/utility": "^2.1.1"
   }
