--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {},
   "dependencies": {
     "@luojianet/toast": "file:201811/toast",
-    "@luojianet/utility": "file:201811/utility"
+    "@luojianet/utility": "file:201811/utility",
+    "babel-runtime": "^6.26.0"
   }
 }
